--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Text animation effect</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <h1>
-  <span>always be</span>
+  <span> </span>
   <div class="message">
-    <div class="word1">Extensions</div>
-    <div class="word2">Conversions</div>
-    <div class="word3">New build</div>
+  <div class="word1">extensions</div>
+    <div class="word2">conversions</div>
+    <div class="word3">new build</div>
+    <link href="https://maszihmaszih.github.io/my-project/style.css" rel="stylesheet" type="text/css"> 
   </div>
 </h1>
-<!-- partial -->
-  
-</body>
-</html>
