--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <div class="word1">extensions</div>
     <div class="word2">conversions</div>
     <div class="word3">new build</div>
-    <link href="https://maszihmaszih.github.io/my-project/style.css" rel="stylesheet" type="text/css"> 
+    <link href="https://maszihmaszih.github.io/my-project-mini/style.css" rel="stylesheet" type="text/css"> 
   </div>
 </h1>
